crates/jarl-core/src/lints/base/pipe_consistency/snapshots/jarl_core__lints__base__pipe_consistency__tests__no_fix_with_comments.snap
---
source: crates/jarl-core/src/lints/base/pipe_consistency/mod.rs
expression: "get_unsafe_fixed_text_with_settings(vec![\"x %>% # trailing comment\\n  f()\",\n\"x %>%\\n  # leading on rhs\\n  f()\",], \"pipe_consistency\", Some(\"4.1\"), None,)"
---
OLD:
====
x %>% # trailing comment
  f()
NEW:
====
x %>% # trailing comment
  f()

OLD:
====
x %>%
  # leading on rhs
  f()
NEW:
====
x %>%
  # leading on rhs
  f()
